# ai-assistant

./: .gitignore  CLAUDE.md  Dockerfile  How_to_run.md  Kashish_tasks.md  README.md  Saurav_tasks.md  Sushmita_tasks.md  What-is-this-project-till-now.md  pyproject.toml
app/: main.py
app/core/: security.py
app/db/: session.py
app/models/: user.py
app/routes/: auth.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/db/: session.py
backend/app/schemas/: auth.py
backend/app/services/: auth_service.py
